tests/snapshots/compile_file__tup.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/tup.hvm
---
@main = ((1 4) (2 3))
