tests/snapshots/compile_file__tup_add.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/tup_add.bend
---
@main = b
  & (1 2) ~ ($([+] $(a b)) a)
