tests/snapshots/compile_file__unapplied_eta.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/unapplied_eta.hvm
---
@Id = (a a)
@main = (a b)
& @Id ~ (a b)

