tests/snapshots/compile_file__unbound_with_tup_pattern.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/unbound_with_tup_pattern.hvm
---
In definition 'Foo': Unbound variable 'a'
